fix: fix clear stream endpoint to behave like refresh (#12889)